@@ -6,12 +6,13 @@
 import numpy as np
 import matplotlib.pyplot as plt
 
-from typhon.cm import mpl_colors, figsize
+from typhon.cm import mpl_colors
+from typhon.plots import figsize
 
 
 fig, ax = plt.subplots(figsize=figsize(10))
-ax.set_prop_cycle(color=mpl_colors('qualitative2', 5))
-for c in np.arange(5):
+ax.set_prop_cycle(color=mpl_colors('qualitative2', 7))
+for c in np.arange(7):
     X = np.random.randn(100)/2
     Y = np.random.randn(100)/2
     ax.plot(X+c, Y+c, linestyle='none', marker='.', markersize=20)
